; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_thread_event.c_thread_event_update.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_thread_event.c_thread_event_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thread_event_update(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @thread_allocated_next_event_compute(i32* %5)
  store i64 %6, i64* %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i64, i64* %3, align 8
  %9 = call i32 @thread_event_adjust_thresholds_helper(i32* %7, i64 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @thread_allocated_last_event_get(i32* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i64 @thread_allocated_get(i32* %12)
  %14 = load i64, i64* %4, align 8
  %15 = sub nsw i64 %13, %14
  %16 = load i32*, i32** %2, align 8
  %17 = call i64 @thread_allocated_next_event_get(i32* %16)
  %18 = load i64, i64* %4, align 8
  %19 = sub nsw i64 %17, %18
  %20 = icmp sge i64 %15, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @thread_event_trigger(i32* %22, i32 1)
  br label %27

24:                                               ; preds = %1
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @thread_event_assert_invariants(i32* %25)
  br label %27

27:                                               ; preds = %24, %21
  ret void
}

declare dso_local i64 @thread_allocated_next_event_compute(i32*) #1

declare dso_local i32 @thread_event_adjust_thresholds_helper(i32*, i64) #1

declare dso_local i64 @thread_allocated_last_event_get(i32*) #1

declare dso_local i64 @thread_allocated_get(i32*) #1

declare dso_local i64 @thread_allocated_next_event_get(i32*) #1

declare dso_local i32 @thread_event_trigger(i32*, i32) #1

declare dso_local i32 @thread_event_assert_invariants(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
